--- a/freewifiClient/res/values/strings.xml
+++ b/freewifiClient/res/values/strings.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">freewifi</string>
+    <string name="tv_helloworld">Hello world</string>
+    <string name="btn_clickme">Click me</string>
+    <string name="btn_locate">Locate</string>
+    <string name="btn_changeloc">ChangLoc</string>
 
     <string-array name="aty_list">
         <item>Wifi</item>
         <item>Login</item>
+        <item>Locating</item>
     </string-array>
 </resources>
