--- a/freewifiClient/res/values/strings.xml
+++ b/freewifiClient/res/values/strings.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">freewifi</string>
+    <string name="app_name">FreeWifi</string>
     <string name="tv_helloworld">Hello world</string>
     <string name="btn_clickme">Click me</string>
     <string name="btn_locate">Locate</string>
     <string name="btn_changeloc">ChangLoc</string>
 
     <string-array name="aty_list">
-        <item>Wifi</item>
-        <item>Login</item>
-        <item>Locating</item>
-        <item>JsonTest</item>
+        <item>Wifi</item> <!--Wifi测试页-->
+        <item>Login</item> <!--注册测试页-->
+        <item>Locating</item> <!--定位测试页-->
+        <item>JsonTest</item> <!--Json测试页-->
+        <item>PushTest</item> <!--Push测试页-->
     </string-array>
 </resources>
