--- a/freewifiClient/res/values/strings.xml
+++ b/freewifiClient/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="btn_checksupformoments">Check Support of Moments</string>
     <string name="btn_sharetowechatmoments">Share to Wechat Moments</string>
 
-    <string name="actionbar_title">TestMainPage</string>
+    <string name="actionbar_title">FreeWifi</string>
 
     <string-array name="aty_list">
         <item>Wifi</item> <!--Wifi测试页-->
